--- a/eAnalysis/00_basic_class/Ex02_kernel.ipynb
+++ b/eAnalysis/00_basic_class/Ex02_kernel.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "hello\n",
+      "hi\n"
      ]
     }
    ],
@@ -54,17 +55,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i #restart 하면 i안나옴 #실행 순서도 중요"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time.sleep(1)"
+   ]
   },
   {
    "cell_type": "code",
