--- a/eAnalysis/01_numpy_class/Ex00_reviewList.ipynb
+++ b/eAnalysis/01_numpy_class/Ex00_reviewList.ipynb
@@ -4,37 +4,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 파이썬의 리스트와 튜플"
+    "## 파이썬의 리스트와 튜플\n",
+    "\n",
+    "*비교정리*\n",
+    "    \n",
+    "       - 파이썬의 list / tuple\n",
+    "       - numpy의 dnarray\n",
+    "       - pandas의 Dataframe / Series"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[22, 44, 11, ('길동', '길자', '길길')]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## (1) 22, 44, 11 요소의 리스트 a_data 생성\n",
     "## (2) 길자, 길동, 길길 요소의 튜플 b_data생성\n",
-    "## (3) b_data 튜플을 a_data 리스트에 추가\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## (4) b_list에서 2번째 요소까지 출력\n"
+    "## (3) b_data 튜플을 a_data 리스트에 추가\n",
+    "\n",
+    "\n",
+    "a_data=[22,44,11]\n",
+    "b_data=('길동','길자','길길')\n",
+    "a_data.append(b_data)\n",
+    "\n",
+    "a_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('길동', '길자')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## (4) b_list에서 2번째 요소까지 출력\n",
+    "b_data[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22, 44, 10, ('길동', '길자', '길길'))\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-09688985d37c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0ma_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "## (5) a_data를 튜플로 변경\n",
-    "##      11을 10으로 변경하려면?\n"
+    "##      11을 10으로 변경하려면?  #튜플이면 변경 불가\n",
+    "a_data[2] = 10\n",
+    "print(a_data)\n",
+    "\n",
+    "a_data = tuple(a_data) \n",
+    "a_data[2] = 11 #'tuple' object does not support item assignment"
    ]
   },
   {
@@ -63,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +132,7 @@
        "['어밴져스', '기생충', '가디언스갤럭시', '어떤영화', '유명한 영화']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,10 +151,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['어밴져스', '기생충', '가디언스갤럭시', '어떤영화', '유명한 영화', '어벤져스2']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.append('어벤져스2')\n",
+    "movies"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['어밴져스', '기생충', '가디언스갤럭시', '어떤영화', '유명한 영화']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.pop()\n",
+    "movies"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,10 +207,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['어밴져스', '기생충', '가디언스갤럭시', '어떤영화', '유명한 영화', '어벤져스2', '기생충2', '어벤져스2', '기생충2']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.extend(['어벤져스2','기생충2'])\n",
+    "movies"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +235,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['어밴져스', '기생충', '가디언스갤럭시', '어떤영화', '유명한 영화', '기생충2', '기생충2']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.remove('어벤져스2')\n",
+    "movies"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,10 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "movies.insert(4,'오래된 영화')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,10 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['가디언스갤럭시', '어떤영화', '오래된 영화']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies[2:5]"
+   ]
   }
  ],
  "metadata": {
