--- a/eAnalysis/01_numpy_class/Ex01_dnarray.ipynb
+++ b/eAnalysis/01_numpy_class/Ex01_dnarray.ipynb
@@ -22,36 +22,108 @@
     "    \n",
     "    * ndarray \n",
     "        - 넘파이 기반 데이타 타입\n",
-    "        - np.array()       "
+    "        - np.array()   \n",
+    "        \n",
+    "    * 자료형 정리\n",
+    "        + 파이썬(list / tuple)\n",
+    "        + 넘파이(dnarray)\n",
+    "        + 판다스 (dataframe/series)\n",
+    "        \n",
+    "        \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [9 8 7]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "list_1 = [1,2,3]\n",
+    "list_2 = [9,8,7]\n",
+    "\n",
+    "arr = np.array([list_1,list_2])\n",
+    "print(arr)\n",
+    "print(type(arr))\n",
+    "print(arr.shape)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1   2   3]\n",
+      " [  9 100   7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#두번째 행에 두번째 열의 값을 100으로 지정\n",
+    "\n",
+    "arr[1][1]=100\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "?arr  #도움말 보기"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n",
+      "(1, 3)\n",
+      "(2, 3)\n",
+      "1 차원\n",
+      "2 차원\n",
+      "2 차원\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([1,2,3])\n",
+    "arr2 = np.array([[1,2,3]])\n",
+    "arr3 = np.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "print(arr1.shape) #1차원 튜플로 3개의 요소를 가짐 (3,)\n",
+    "print(arr2.shape) #1행 3열의 요소를 가진 2차원 (1, 3)\n",
+    "print(arr3.shape)#2행 3열의 요소를 가진 2차원 (2, 3)\n",
+    "\n",
+    "\n",
+    "#차원수 확인\n",
+    "print(arr1.ndim,'차원') #1차원\n",
+    "print(arr2.ndim,'차원') #2차원\n",
+    "print(arr3.ndim,'차원')#2차원"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,24 +134,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "#자료형 확인\n",
+    "print(type(arr))\n",
+    "\n",
+    "#요소의 자료형 확인\n",
+    "print(arr.dtype)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.,   2.,   3.],\n",
+       "       [  9., 100.,   7.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#요소의 자료형 변경\n",
+    "arr2 = arr.astype(np.float64)\n",
+    "arr2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[1.  2.  3.6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1,2,3.6]\n",
+    "\n",
+    "print(type(list1))\n",
+    "list2 = np.asarray(list1)\n",
+    "print(list2)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -103,24 +221,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 1  4  7 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(10)\n",
+    "print(a)\n",
+    "\n",
+    "b=np.arange(1,11)\n",
+    "print(b)\n",
+    "\n",
+    "c=np.arange(1,11,3)\n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = np.zeros((5,5))  #기본자료형 float\n",
+    "print(a2.dtype)\n",
+    "a2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a3 = np.ones((3,4), dtype='int32')\n",
+    "a3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,26 +310,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "(10,)\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(10)\n",
+    "print(arr)\n",
+    "print(arr.shape)\n",
+    "print(arr.ndim)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 10 into shape (3,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-45-eb86ea41f5cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0marr3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 10 into shape (3,3)"
+     ]
+    }
+   ],
+   "source": [
+    "arr2 = arr.reshape(2,5)\n",
+    "print(arr2)\n",
+    "\n",
+    "\n",
+    "arr3 = arr2.reshape(3,3) #cannot reshape array of size 10 into shape (3,3)\n",
+    "print(arr3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]\n",
+      " [16 17 18 19]]\n",
+      "[[ 0  1]\n",
+      " [ 2  3]\n",
+      " [ 4  5]\n",
+      " [ 6  7]\n",
+      " [ 8  9]\n",
+      " [10 11]\n",
+      " [12 13]\n",
+      " [14 15]\n",
+      " [16 17]\n",
+      " [18 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#-1 적용\n",
+    "\n",
+    "arr = np.arange(20)\n",
+    "print(arr)\n",
+    "\n",
+    "arr2 = arr.reshape(5,-1)\n",
+    "print(arr2)\n",
+    "\n",
+    "arr3 = arr.reshape(-1,2)\n",
+    "print(arr3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,14 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  2  3  4  5  6  7  8  9 10]\n"
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "3\n",
+      "8\n"
      ]
     }
    ],
@@ -179,40 +436,95 @@
     "print(arr)\n",
     "\n",
     "## 세번째 요소 추출 ( 0부터 인덱스)\n",
+    "print(arr[2])\n",
     "\n",
-    "\n",
-    "## 뒤에서 세번째 요소 추출 ( 뒤에서 인덱스는 -1부터)\n"
+    "## 뒤에서 세번째 요소 추출 ( 뒤에서 인덱스는 -1부터)\n",
+    "print(arr[-3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "## 1부터 9까지 nparray를 만들고 3행 3열 2차원 구조로 변경한후\n",
     "## 두번째 행의 세번째 열의 값 추출\n",
-    "\n"
+    "arr =np.arange(1,10)\n",
+    "print(arr)\n",
+    "\n",
+    "arr2 = arr.reshape(3,3)\n",
+    "print(arr2)\n",
+    "\n",
+    "print(arr2[1][2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "[2 3 4]\n",
+      "[2 3 4 5 6 7 8 9]\n",
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
     "#------------------------------------------ (2) 슬라이싱 (:)\n",
     "arr = np.arange(1, 10)\n",
+    "print(arr)\n",
+    "\n",
+    "#2번째부터 4번째까지 요소 추출\n",
+    "print(arr[1:4])\n",
+    "#2번째부터 마지막까지 요소 추출\n",
+    "print(arr[1:])\n",
+    "#처음부터 4번째 요소까지 추출\n",
+    "print(arr[:4])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[1 2]\n",
+      " [4 5]]\n",
+      "[[4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2차원 배열에서 생성\n",
     "\"\"\"\n",
@@ -226,10 +538,11 @@
     "print(ndarr)\n",
     "    \n",
     "## 그림에서 1, 2, 4, 5 추출\n",
+    "print(ndarr[:2,:2])\n",
     "\n",
     "\n",
     "## 그림에서 4, 5, 6, 7, 8, 9 추출\n",
-    "\n",
+    "print(ndarr[1:,:])\n",
     "\n",
     "## 그림에서 2, 3, 5, 6 추출\n",
     "\n",
@@ -238,25 +551,50 @@
     "\n",
     "\n",
     "## 그림에서 전체 요소 추출\n",
-    "\n"
+    "print(ndarr[:,:])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2차원 ndarray에서 뒤의 오는 인덱스가 없으면 1차원으로 반환\n",
     "# 3차원 ndarray에서 뒤의 오는 인덱스가 없으면 2차원으로 반환\n",
-    "\n"
+    "print(ndarr[1][1])\n",
+    "print(ndarr[1]) #1차원 ndarr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[1 2]\n",
+      " [4 5]]\n",
+      "[[1 2]\n",
+      " [4 5]]\n",
+      "[1 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# 슬라이싱[:]과 인덱스선택을 결합\n",
     "\n",
@@ -271,7 +609,9 @@
     "print(ndarr)\n",
     "\n",
     "## 그림에서 1, 2, 4, 5 추출\n",
-    "\n",
+    "print(ndarr[[0,1],:2])\n",
+    "print(ndarr[:2,:2])\n",
+    "print(ndarr[[0,1],[0,1]]) #인덱스만 쓸경우 [1 5]\n",
     "\n",
     "## 그림에서 4, 5, 6, 7, 8, 9 추출\n",
     "\n",
@@ -290,9 +630,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[False False False]\n",
+      " [False False  True]\n",
+      " [ True  True  True]]\n",
+      "[6 7 8 9]\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7 88  9]]\n"
+     ]
+    }
+   ],
    "source": [
     "#------------------------------------------ (3) 블린인덱싱\n",
     "# 조건 필터링과 검색을 같이 하기에 자주 사용\n",
@@ -302,9 +659,13 @@
     "print(ndarr)\n",
     "\n",
     "# 5보다 큰 요소들 추출\n",
+    "print(ndarr > 5) #각요소별 비교 true /false 반환\n",
+    "print(ndarr[ndarr>5])\n",
     "\n",
-    "\n",
-    "# 8값 요소를 88로 변경\n"
+    "# 8값 요소를 88로 변경  \n",
+    "ndarr[ndarr==8] =88\n",
+    "print(ndarr)\n",
+    "\n"
    ]
   }
  ],
