--- a/eAnalysis/01_numpy_class/Ex02_calc.ipynb
+++ b/eAnalysis/01_numpy_class/Ex02_calc.ipynb
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "ar = np.array([1,3,5,7])"
+    "ar = np.array([1,3,5,7])\n"
    ]
   },
   {
@@ -228,13 +228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3, 2],\n",
+       "       [4, 7, 5],\n",
+       "       [9, 8, 6]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " # 행단위 정렬\n",
+    "arr2 = np.array([[9,3,6],[1,7,2],[4,8,5]])\n",
     "\n",
-    " # 열단위 정렬 -> [주의] 다른 행간의 성분들이 섞인다"
+    "# 행단위 정렬\n",
+    "np.sort(arr2)\n",
+    " # 열단위 정렬 -> [주의] 다른 행간의 성분들이 섞인다\n",
+    "np.sort(arr2 , axis=0) # axis = 0 행~"
    ]
   }
  ],
