--- a/eAnalysis/01_numpy_class/Ex04_sort.ipynb
+++ b/eAnalysis/01_numpy_class/Ex04_sort.ipynb
@@ -41,20 +41,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본: [3 1 9 7]\n",
+      "정렬: [1 3 7 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 넘파이 sort\n"
+    "# 넘파이 sort\n",
+    "sort1 = np.sort(origin)\n",
+    "print('원본:' ,origin)\n",
+    "print('정렬:' ,sort1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본: [1 3 7 9]\n",
+      "정렬: None\n"
+     ]
+    }
+   ],
    "source": [
-    "# 행렬의 sort\n"
+    "# 행렬의 sort\n",
+    "sort2 = origin.sort()\n",
+    "print('원본:' ,origin)\n",
+    "print('정렬:' ,sort2)"
    ]
   },
   {
@@ -90,13 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  6  2]\n",
+      " [ 9 11  3]]\n",
+      "[[ 3  6  9]\n",
+      " [ 2  5 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([[9, 6, 3],[5, 11, 2]])\n",
     "\n",
-    "\n"
+    "#행단위 정렬\n",
+    "\n",
+    "sort1 = np.sort(arr,axis=0)\n",
+    "print(sort1)\n",
+    "\n",
+    "#열단위 정렬\n",
+    "sort2 = np.sort(arr,axis=1)\n",
+    "print(sort2)"
    ]
   },
   {
@@ -117,19 +159,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 0, 3, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "arr = np.array([3, 8, 2, 5])\n"
+    "arr = np.array([3, 8, 2, 5])\n",
+    "\n",
+    "idx = np.argsort(arr)\n",
+    "idx"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 0 4 2 1]\n",
+      "[1 2 4 0 3]\n",
+      "99 박길동\n",
+      "88 김길동\n",
+      "77 맹길동\n",
+      "66 홍길동\n",
+      "44 최길동\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = np.array([66,99,88,44,77])\n",
+    "names = np.array(['홍길동','박길동','김길동','최길동','맹길동'])\n",
+    "\n",
+    "#성적순으로 점수와 이름을 매칭하여 출력\n",
+    "\n",
+    "idr = np.argsort(scores)\n",
+    "print(idr)\n",
+    "\n",
+    "idr2=idr[::-1]\n",
+    "print(idr2)\n",
+    "\n",
+    "for a in idr2:\n",
+    "    print(scores[a],names[a])\n",
+    "    \n",
+    "    \n",
+    "       "
+   ]
   },
   {
    "cell_type": "code",
