--- a/eAnalysis/02_pandas_class/Ex01_Series개념.ipynb
+++ b/eAnalysis/02_pandas_class/Ex01_Series개념.ipynb
@@ -15,37 +15,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    22\n",
+       "1    33\n",
+       "2    44\n",
+       "3    25\n",
+       "4    28\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pandas import Series\n",
+    "#from pandas import Series\n",
+    "#age_in = Series([22,33,44,25,28])\n",
     "\n",
-    "age_in = Series([22,33,44,25,28])\n"
+    "import pandas as pd\n",
+    "age_in = pd.Series([22,33,44,25,28])\n",
+    "age_in\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=5, step=1)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "# 인덱스 확인\n",
+    "age_in.index\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22, 33, 44, 25, 28], dtype=int64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 데이터 값 확인\n",
+    "age_in.values"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=5, step=1)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 키를 확인\n",
+    "age_in.keys\n",
+    "age_in.keys()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,27 +116,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "가    22\n",
+       "나    33\n",
+       "다    44\n",
+       "라    25\n",
+       "마    28\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Series 인덱스 중복 확인\n"
+    "age_in = pd.Series([22,33,44,25,28], index = ['가','나','다','라','마'])\n",
+    "age_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['가', '나', '다', '라', '마'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "가     22\n",
+       "나     33\n",
+       "다    100\n",
+       "라     25\n",
+       "마     28\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 인덱스만 확인\n",
+    "# 데이터값만 확인\n",
+    "# 키값 확인\n",
+    "\n",
+    "#'다' 요소의 값을 100 지정\n",
+    "\n",
+    "print(age_in.index)\n",
+    "age_in.values\n",
+    "age_in.keys\n",
+    "\n",
+    "\n",
+    "age_in['다'] = 100\n",
+    "age_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'다'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Series 인덱스 중복 확인\n",
+    "\n",
+    "srs = pd.Series(['가','나','다'], index=['a','b','a'])\n",
+    "srs\n",
+    "srs['a']\n",
+    "\n",
+    "srs[0] #순번으로도 접근 가능\n",
+    "srs[1]\n",
+    "srs[-1]"
    ]
   },
   {
@@ -88,43 +223,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "kim      25\n",
+       "park     22\n",
+       "lee     100\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 딕셔러리를 시리즈 형태로 변환\n",
-    "info_list = { 'kim': 25, 'park':22, 'lee':34 }\n"
+    "info_list = { 'kim': 25, 'park':22, 'lee':34 }\n",
+    "\n",
+    "info_srs = pd.Series(info_list)\n",
+    "info_srs\n",
+    "\n",
+    "#인덱스만 확인 \n",
+    "info_srs.index\n",
+    "#데이터값만 확인\n",
+    "info_srs.values\n",
+    "#키값 확인\n",
+    "info_srs.keys()\n",
+    "#'lee' 요소의 값을 100 지정\n",
+    "\n",
+    "info_srs['lee'] = 100\n",
+    "info_srs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1   NaN\n",
+       "2   NaN\n",
+       "3   NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 인덱스를 지정하면 -> NaN로\n",
-    "# 이미 인덱스 역할을 할 요소가 있는데 index를 지정해서 그런가\n"
+    "# 이미 인덱스 역할을 할 요소가 있는데 index를 지정해서 그런가\n",
+    "info_list = { 'kim': 25, 'park':22, 'lee':34 }\n",
+    "\n",
+    "info_srs = pd.Series(info_list, index = [1,2,3])\n",
+    "info_srs"
    ]
   },
   {
@@ -172,17 +332,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'mean'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-16667a659c70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0modd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0modd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'mean'"
+     ]
+    }
+   ],
+   "source": [
+    "odd = [1,2,3,4,9]\n",
+    "#odd.mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.8"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd = pd.Series(odd)\n",
+    "odd.mean()"
+   ]
   }
  ],
  "metadata": {
