--- a/eAnalysis/02_pandas_class/Ex01_DataFrame개념.ipynb
+++ b/eAnalysis/02_pandas_class/Ex01_DataFrame개념.ipynb
@@ -58,11 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 108,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -119,7 +126,7 @@
        "2  김길동   44   산업"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,6 +140,7 @@
     "          'age':[22,33,44], \n",
     "          'dept':['컴공','국어','산업']\n",
     "         }\n",
+    "print(type(mydata))\n",
     "df = pd.DataFrame(mydata)\n",
     "type(df) #pandas.core.frame.DataFrame\n",
     "df\n"
