--- a/eAnalysis/02_pandas_class/Ex04_apply함수.ipynb
+++ b/eAnalysis/02_pandas_class/Ex04_apply함수.ipynb
@@ -2,20 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    a  b\n",
+       "0  10  2\n",
+       "1  20  4\n",
+       "2  30  6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame( {'a':[10,20,30], 'b':[2, 4, 6]})\n"
+    "df = pd.DataFrame( {'a':[10,20,30], 'b':[2, 4, 6]})\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 함수 정의\n",
     "def my_fun1(x):\n",
@@ -23,23 +90,121 @@
     "\n",
     "def my_fun2(x, n):\n",
     "    return x**n\n",
-    "\n"
+    "\n",
+    "print(my_fun1(4))\n",
+    "print(my_fun2(4,2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    100\n",
+      "1    400\n",
+      "2    900\n",
+      "Name: a, dtype: int64\n",
+      "0     1000\n",
+      "1     8000\n",
+      "2    27000\n",
+      "Name: a, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>400</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>900</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a   b\n",
+       "0  100   4\n",
+       "1  400  16\n",
+       "2  900  36"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2. apply 함수를 이용하여 모든 데이타에 각각 함수 적용하기\n"
+    "# 2. apply 함수를 이용하여 모든 데이타에 각각 함수 적용하기\n",
+    "re1 = df['a'].apply(my_fun1)\n",
+    "print(re1)\n",
+    "\n",
+    "\n",
+    "re2 = df['a'].apply(my_fun2,n=3)\n",
+    "print(re2)\n",
+    "\n",
+    "df.apply(my_fun1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    60\n",
+      "b    12\n",
+      "dtype: int64\n",
+      "a    60\n",
+      "b    12\n",
+      "dtype: int64\n",
+      "0    12\n",
+      "1    24\n",
+      "2    36\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# [연습] 데이타 프레임의 각 열 단위로 데이타의 합을 출력\n",
     "def my_fun3(col):\n",
@@ -47,14 +212,33 @@
     "    for i in col:\n",
     "        sum += i\n",
     "    return sum\n",
-    "\n"
+    "\n",
+    "re3 = df.apply(my_fun3) # axis = 0(행방향 --> 열단위)\n",
+    "print(re3)\n",
+    "\n",
+    "re3 = df.apply(lambda x : my_fun3(x))\n",
+    "print(re3)\n",
+    "\n",
+    "re4 = df.apply(my_fun3, axis = 1)\n",
+    "print(re4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    C\n",
+      "1    B\n",
+      "2    A\n",
+      "Name: a, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# 'a' 컬럼의 값이 10 이하는 'C', 20 이하는  'B', 30 이하는 'A'를 지정하고자 할 때\n",
     "def func(score):\n",
@@ -62,7 +246,10 @@
     "    if( score <= 10) : grade='C'\n",
     "    elif(score <= 20) : grade='B'\n",
     "    elif(score <= 30) : grade='A'\n",
-    "    return grade\n"
+    "    return grade\n",
+    "\n",
+    "result = df['a'].apply(func)\n",
+    "print(result)"
    ]
   },
   {
@@ -76,23 +263,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Kang</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>500</td>\n",
+       "      <td>confirmed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kim</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>700</td>\n",
+       "      <td>confirmed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Choi</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>900</td>\n",
+       "      <td>confirmed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Park</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>800</td>\n",
+       "      <td>confirmed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lee</th>\n",
+       "      <td>2017-01-07</td>\n",
+       "      <td>500</td>\n",
+       "      <td>canceled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yoon</th>\n",
+       "      <td>2017-01-09</td>\n",
+       "      <td>700</td>\n",
+       "      <td>confirmed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jang</th>\n",
+       "      <td>2017-01-09</td>\n",
+       "      <td>600</td>\n",
+       "      <td>canceled</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ko</th>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>200</td>\n",
+       "      <td>canceled</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  price      state\n",
+       "Name                              \n",
+       "Kang  2017-01-01    500  confirmed\n",
+       "Kim   2017-01-03    700  confirmed\n",
+       "Choi  2017-01-03    900  confirmed\n",
+       "Park  2017-01-05    800  confirmed\n",
+       "Lee   2017-01-07    500   canceled\n",
+       "Yoon  2017-01-09    700  confirmed\n",
+       "Jang  2017-01-09    600   canceled\n",
+       "Ko    2017-01-10    200   canceled"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# index_col : 지정한 컬럼을 Row Index로 사용한다.\n",
     "customer = pd.read_csv('./data/customer.csv', index_col = \"Name\")\n",
-    "\n"
+    "customer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>state</th>\n",
+       "      <th>grade</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Kang</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>500</td>\n",
+       "      <td>confirmed</td>\n",
+       "      <td>vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kim</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>700</td>\n",
+       "      <td>confirmed</td>\n",
+       "      <td>vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Choi</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>900</td>\n",
+       "      <td>confirmed</td>\n",
+       "      <td>vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Park</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>800</td>\n",
+       "      <td>confirmed</td>\n",
+       "      <td>vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lee</th>\n",
+       "      <td>2017-01-07</td>\n",
+       "      <td>500</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>non-vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yoon</th>\n",
+       "      <td>2017-01-09</td>\n",
+       "      <td>700</td>\n",
+       "      <td>confirmed</td>\n",
+       "      <td>vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jang</th>\n",
+       "      <td>2017-01-09</td>\n",
+       "      <td>600</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>non-vip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ko</th>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>200</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>non-vip</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  price      state    grade\n",
+       "Name                                       \n",
+       "Kang  2017-01-01    500  confirmed      vip\n",
+       "Kim   2017-01-03    700  confirmed      vip\n",
+       "Choi  2017-01-03    900  confirmed      vip\n",
+       "Park  2017-01-05    800  confirmed      vip\n",
+       "Lee   2017-01-07    500   canceled  non-vip\n",
+       "Yoon  2017-01-09    700  confirmed      vip\n",
+       "Jang  2017-01-09    600   canceled  non-vip\n",
+       "Ko    2017-01-10    200   canceled  non-vip"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def custom_class(state,price):\n",
+    "    if (state == 'confirmed') & (price >= 500):\n",
+    "         return 'vip'\n",
+    "    else: \n",
+    "        return 'non-vip'\n",
+    "\n",
+    "customer['grade'] = customer.apply(lambda x : custom_class(x['state'],x['price']), axis=1)\n",
+    "customer\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
