--- a/eAnalysis/02_pandas_class/Ex07_readFile2.ipynb
+++ b/eAnalysis/02_pandas_class/Ex07_readFile2.ipynb
@@ -36,16 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' (1) read_csv() '"
+       "종목명     제일홀딩스\n",
+       "종목코드     3380\n",
+       "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +55,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "\"\"\" (1) read_csv() \"\"\"\n"
+    "\"\"\" (1) read_csv() \"\"\"\n",
+    "df = pd.read_csv('https://gist.githubusercontent.com/allieus/5ce98166166d06ee9060e6a261e812dc/raw')\n",
+    "df.head()\n",
+    "df.tail()\n",
+    "df.loc[0]\n"
    ]
   },
   {
@@ -92,18 +98,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "' (3) pandas-datareader 라이브러리 \\n        ` 설치 필요\\n        ` 최신버전 업그레이드 필수\\n        ` pip install --upgrade pandas-datareader\\n        ` Anaconda Prompt에서 확인 가능(반드시 관리자 권한으로 실행) : conda install pandas-datareader\\n        ` Jupyter 에서 !pip install --upgrade pandas-datareader\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas-datareader\n",
+      "  Downloading https://files.pythonhosted.org/packages/d1/db/c6c72242179251ed9ead7af852296ae9558b1d0cfd972eef6c3398b131d1/pandas_datareader-0.7.4-py2.py3-none-any.whl (113kB)\n",
+      "Requirement already satisfied, skipping upgrade: lxml in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas-datareader) (4.3.4)\n",
+      "Requirement already satisfied, skipping upgrade: requests>=2.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas-datareader) (2.22.0)\n",
+      "Requirement already satisfied, skipping upgrade: pandas>=0.19.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas-datareader) (0.24.2)\n",
+      "Requirement already satisfied, skipping upgrade: wrapt in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas-datareader) (1.11.2)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests>=2.3.0->pandas-datareader) (1.24.2)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests>=2.3.0->pandas-datareader) (2019.6.16)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests>=2.3.0->pandas-datareader) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<2.9,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests>=2.3.0->pandas-datareader) (2.8)\n",
+      "Requirement already satisfied, skipping upgrade: pytz>=2011k in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=0.19.2->pandas-datareader) (2019.1)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.12.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=0.19.2->pandas-datareader) (1.16.4)\n",
+      "Requirement already satisfied, skipping upgrade: python-dateutil>=2.5.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas>=0.19.2->pandas-datareader) (2.8.0)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.5.0->pandas>=0.19.2->pandas-datareader) (1.12.0)\n",
+      "Installing collected packages: pandas-datareader\n",
+      "Successfully installed pandas-datareader-0.7.4\n"
+     ]
     }
    ],
    "source": [
@@ -113,15 +131,33 @@
     "        ` pip install --upgrade pandas-datareader\n",
     "        ` Anaconda Prompt에서 확인 가능(반드시 관리자 권한으로 실행) : conda install pandas-datareader\n",
     "        ` Jupyter 에서 !pip install --upgrade pandas-datareader\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "!pip install --upgrade pandas-datareader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas_datareader as pdr\n",
+    "\n",
+    "df = pdr.get_data_yahoo('035420.KS','2019-08-01','2019-08-31')\n",
+    "\n",
+    "type(df)"
+   ]
   }
  ],
  "metadata": {
